--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <base href="/">
+    <base href="https://ikooot.github.io/GeekTOP/">
 
     <title>GeekTOP - Новости из мира IT</title>
     <meta name="description" content="Новости современной техники, гаджетов и электроники. Так же другая информация из мира it индустрии.">
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Template Basic Images Start -->
-    <meta property="og:image" content="GeekTOP/img/geektop.jpg">
-    <link rel="icon" href="GeekTOP/img/favicon/favicon.ico">
+    <meta property="og:image" content="img/geektop.jpg">
+    <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
     <!-- Template Basic Images End -->
 
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#202225">
     <!-- Custom Browsers Color End -->
 
-    <link rel="stylesheet" href="GeekTOP/css/main.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
 </head>
 
