test change links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body class="isHome">
 <header class="mainHeader">
-    <a href="/" class="mainHeader__logo logoLitera">
+    <a href="https://ikooot.github.io/GeekTOP/index.html" class="mainHeader__logo logoLitera">
         GeekTOP
     </a>
     <div class="mainHeader__searchWrap search">
@@ -618,7 +618,7 @@
 </footer>
 
 <script src="js/scripts.min.js"></script>
-<script id="dsq-count-scr" src="//geektop-kblpqaikrl.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="https://geektop-kblpqaikrl.disqus.com/count.js" async></script>
 
 </body>
 
